hard-gists/3451509/run.log
=== Docker Run Log for 3451509 ===
Started at: Mi 29. Okt 13:51:57 CET 2025

[2025-10-29 13:51:58] START: Running container for 3451509
[2025-10-29 13:51:58] SUCCESS: Container 4dc9ba5479fd9d97b0f19ea44310d0aa74ef8934793a94bc137649c19d435b24 started for 3451509
=== Container logs for 3451509 ===
  File "/snippet.py", line 50
    print validation_request.execute()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3451509 ===
[2025-10-29 13:52:00] INFO: Container 4dc9ba5479fd9d97b0f19ea44310d0aa74ef8934793a94bc137649c19d435b24 has stopped
